Updated pages and added Trifectanet logo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,18 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+<a
+  href="https://wa.me/919117018454"
+  target="_blank"
+  style="position:fixed; bottom:20px; right:20px; background:#25D366; padding:10px 15px; border-radius:50px;"
+>
+  <img
+    src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg"
+    alt="WhatsApp"
+    style="width: 20px; height: 20px;"
+  />
+</a>
+
+
   </body>
 </html>
